v5.0.0/llms/components/ix-blind.md
# ix-blind

> Collapsible container that expands and collapses to show or hide its content.

## Documentation

- https://ix.siemens.io//docs/components/blind/guide.md

## Figma IDs

- 388:3986

## Related examples

Example source links are relative to this Markdown file.

- blind
  - angular:
    - `angular/blind.css`: [source](../../examples/angular-examples/src/preview-examples/blind.css)
    - `angular/blind.html`: [source](../../examples/angular-examples/src/preview-examples/blind.html)
    - `angular/blind.ts`: [source](../../examples/angular-examples/src/preview-examples/blind.ts)
  - angular-standalone:
    - `angular-standalone/blind.css`: [source](../../examples/angular-standalone-examples/src/preview-examples/blind.css)
    - `angular-standalone/blind.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/blind.html)
    - `angular-standalone/blind.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/blind.ts)
  - html:
    - `html/blind.css`: [source](../../examples/html-examples/src/preview-examples/blind.css)
    - `html/blind.html`: [source](../../examples/html-examples/src/preview-examples/blind.html)
  - react:
    - `react/blind.scoped.css`: [source](../../examples/react-examples/src/preview-examples/blind.scoped.css)
    - `react/blind.tsx`: [source](../../examples/react-examples/src/preview-examples/blind.tsx)
  - vue:
    - `vue/blind.css`: [source](../../examples/vue-examples/src/preview-examples/blind.css)
    - `vue/blind.vue`: [source](../../examples/vue-examples/src/preview-examples/blind.vue)
- blind-header-actions
  - angular:
    - `angular/blind-header-actions.css`: [source](../../examples/angular-examples/src/preview-examples/blind-header-actions.css)
    - `angular/blind-header-actions.ts`: [source](../../examples/angular-examples/src/preview-examples/blind-header-actions.ts)
  - angular-standalone:
    - `angular-standalone/blind-header-actions.css`: [source](../../examples/angular-standalone-examples/src/preview-examples/blind-header-actions.css)
    - `angular-standalone/blind-header-actions.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/blind-header-actions.ts)
  - html:
    - `html/blind-header-actions.css`: [source](../../examples/html-examples/src/preview-examples/blind-header-actions.css)
    - `html/blind-header-actions.html`: [source](../../examples/html-examples/src/preview-examples/blind-header-actions.html)
  - react:
    - `react/blind-header-actions.scoped.css`: [source](../../examples/react-examples/src/preview-examples/blind-header-actions.scoped.css)
    - `react/blind-header-actions.tsx`: [source](../../examples/react-examples/src/preview-examples/blind-header-actions.tsx)
  - vue:
    - `vue/blind-header-actions.css`: [source](../../examples/vue-examples/src/preview-examples/blind-header-actions.css)
    - `vue/blind-header-actions.vue`: [source](../../examples/vue-examples/src/preview-examples/blind-header-actions.vue)
- blind-variants
  - angular:
    - `angular/blind-variants.css`: [source](../../examples/angular-examples/src/preview-examples/blind-variants.css)
    - `angular/blind-variants.html`: [source](../../examples/angular-examples/src/preview-examples/blind-variants.html)
    - `angular/blind-variants.ts`: [source](../../examples/angular-examples/src/preview-examples/blind-variants.ts)
  - angular-standalone:
    - `angular-standalone/blind-variants.css`: [source](../../examples/angular-standalone-examples/src/preview-examples/blind-variants.css)
    - `angular-standalone/blind-variants.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/blind-variants.html)
    - `angular-standalone/blind-variants.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/blind-variants.ts)
  - html:
    - `html/blind-variants.css`: [source](../../examples/html-examples/src/preview-examples/blind-variants.css)
    - `html/blind-variants.html`: [source](../../examples/html-examples/src/preview-examples/blind-variants.html)
  - react:
    - `react/blind-variants.scoped.css`: [source](../../examples/react-examples/src/preview-examples/blind-variants.scoped.css)
    - `react/blind-variants.tsx`: [source](../../examples/react-examples/src/preview-examples/blind-variants.tsx)
  - vue:
    - `vue/blind-variants.css`: [source](../../examples/vue-examples/src/preview-examples/blind-variants.css)
    - `vue/blind-variants.vue`: [source](../../examples/vue-examples/src/preview-examples/blind-variants.vue)

## Related blocks

- unavailable (not present in registry JSON)

## Properties

- `collapsed`; attr: `collapsed`; type: `boolean`; default: `false` - Collapsed state
- `icon`; attr: `icon`; type: `string | undefined` - Optional icon to be displayed next to the header label
- `label`; attr: `label`; type: `string | undefined` - Label of blind
- `sublabel`; attr: `sublabel`; type: `string | undefined` - Secondary label inside blind header
- `variant`; attr: `variant`; type: `"alarm" | "critical" | "filled" | "info" | "neutral" | "outline" | "primary" | "success" | "warning"`; default: `'filled'` - Blind variant

## Events

- `collapsedChange` - Collapsed state changed

## Slots

- None
